tester/src/test/aya/failure/syntax/issue293.aya.txt
In file $FILE:7:37 ->

  5 |   | 鎴戜滑
  6 |   | 浠栦滑
  7 | def 娴嬫祴娴嬫祴娴嬫祴娴嬫祴娴� : 鍗曚汉浠ｈ瘝 => 鎴戜滑
                                           ^-^
  
Error: The expected type `鍗曚汉浠ｈ瘝` does not match the actual type `澶氫汉浠ｈ瘝`
Tycking interrupted due to errors.
What are you doing?
